--- a/OracleGoldenGate/23/nginx/nginx.conf
+++ b/OracleGoldenGate/23/nginx/nginx.conf
@@ -1,8 +1,8 @@
-## Copyright (c) 2021, Oracle and/or its affiliates.
+## Copyright (c) 2024, Oracle and/or its affiliates.
 
 ##
 ##  nginx.conf
-##  Configuration file for Nginx Reverse Proxy
+##  Configuration file for reverse proxy
 ##
 
 user                    nginx;
